# study_logger

./: .env  Cargo.toml  database.sqlite3
migrations/: 20221123091021_test.sql  20221123092722_create_study_status.sql  20221123092823_create_study_log.sql
