[package]
name = "study_logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8.0", features = [ "attributes" ] }
dotenv = "0.15.0"
sqlx = { version = "0.5.10", features = [ "sqlite", "runtime-async-std-native-tls" ] }
